src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Invitee_Count__c</fullName>
        <label>Invitee Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kiva_UID__c</fullName>
        <externalId>true</externalId>
        <label>Kiva UID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lender_Id__c</fullName>
        <label>Lender Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Count__c</fullName>
        <label>Loan Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Since__c</fullName>
        <label>Member Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_URL__c</fullName>
        <label>Personal URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Whereabouts__c</fullName>
        <label>Whereabouts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Lender</fullName>
        <active>true</active>
        <description>Lender on Kiva.com</description>
        <label>Lender</label>
    </recordTypes>
</CustomObject>